# gridsentry

./: .gitignore  README.md
cloud/: README.md
cloud/lambda_inference/: Dockerfile  handler.py
cloud/lambda_inference/app/: lambda_function.py  scaler.pkl  theft_detector_svm.pkl
cloud/training/: Identifier_model.ipynb  README.md  converter.py  dataset_gen_labelled.py  handler.py  power_data_labeled.csv
firmware_files/: CMakeLists.txt  README.md
firmware_files/components/esp-aws-iot/: .gitlab-ci.yml  CMakeLists.txt
firmware_files/components/esp-aws-iot/.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
firmware_files/components/esp-aws-iot/aws-iot-device-sdk-embedded-C/external_libs/mbedTLS/: README.txt
firmware_files/components/esp-aws-iot/aws-iot-device-sdk-embedded-C/include/: aws_iot_log.h
firmware_files/components/esp-aws-iot/examples/subscribe_publish/main/: subscribe_publish_sample.c
firmware_files/components/esp-aws-iot/libraries/backoffAlgorithm/backoffAlgorithm/: CHANGELOG.md  MISRA.md  (+3 more)
firmware_files/main/: CMakeLists.txt  Kconfig.projbuild  app_nvs.c  app_nvs.h  aws_iot.c  aws_iot.h  config.h  http_server.c  http_server.h  idf_component.yml  ina219.c  ina219.h  ina3221.c  ina3221.h  main.c  monitor_health.h  requirements.txt  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  task_manager_i2c.c  task_manager_i2c.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
firmware_files/main/certs/: README.md
firmware_files/main/webpage/: app.css  app.js  index.html
hardware/: bom.xls
(+636 files in other folders)
